<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloactividad2"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/toppadding"
            android:layout_marginBottom="@dimen/toppadding"
            android:textSize="@dimen/tituloactividad2"
            android:textColor="@color/primaryDarkColor"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:text="@string/editnombre"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:textSize="@dimen/textoactividad2"
            android:text="@string/editnombre"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:text="@string/editfecha"/>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:textSize="@dimen/textoactividad2"
            android:text="@string/editfecha"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:text="@string/edittelefono"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:textSize="@dimen/textoactividad2"
            android:text="@string/edittelefono"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:text="@string/editemail"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:textSize="@dimen/textoactividad2"
            android:text="@string/editemail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:text="@string/editdescripcion"/>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:layout_marginBottom="@dimen/toppadding"
            android:textSize="@dimen/textoactividad2"
            android:text="@string/editdescripcion"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="131dp"
                android:text="@string/botoneditar"
                android:theme="@style/MiBotonRaised" />
        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>